# YaTracker

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  LICENSE  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py
.github/workflows/: docs.yml  linters.yml  publish.yml  pypi-release.yml
custom_fields/: index.html
docs/: custom_fields.md  howto.md  index.md  tech.md
examples/: attachments.py  basic.py  custom_fileds.py  worklogs.py
howto/: index.html
yatracker/: __init__.py  tracker.py
yatracker/tracker/: __init__.py  api.py  base.py  client.py
yatracker/tracker/categories/: __init__.py  attached_files.py  comments.py  issues.py  priorities.py  queues.py  worklogs.py
yatracker/types/: __init__.py  attachment.py  base.py  comment.py  duration.py  exceptions.py  full_issue.py  full_queue.py  issue.py  issue_link.py  issue_type.py  issue_type_config.py  mixins.py  objects.py  priority.py  queue.py  queue_field.py  queue_field_options_provider.py  queue_field_query_provider.py  queue_field_schema.py  queue_version.py  resolution.py  sprint.py  status.py  transition.py  transitions.py  user.py  workflow.py  worklog.py
yatracker/utils/: camel_case.py  json.py  mixins.py
