[tool.poetry]
name = "yatracker"
version = "2022.4.1"
description = "Async client for Yandex Tracker API"
authors = ["Oleg A. <oleg@trueweb.app>"]
maintainers = ["Oleg A. <oleg@trueweb.app>"]
license = "MIT"
readme = "README.md"
homepage = ""
repository = "https://github.com/Olegt0rr/YaTracker/"
documentation = "https://yandex.ru/dev/connect/tracker/"
keywords = [
    "Yandex",
    "Tracker",
    "API",
    "async",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.8"
certifi = "^2023"
pydantic = "^1.8"

[tool.poetry.dev-dependencies]
black = "^23"
coverage = "^6"
flake8 = "^4"
isort = "^5"
mypy = "^0"
pre-commit = "^2"
pylint = "^2"
pytest = "^7"
pytest-asyncio = "^0"
pytest-cov = "^3"

[tool.poetry.extras]
ultra = ["ujson", "uvloop"]

[tool.black]
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pylint.'MASTER']
extension-pkg-whitelist = "pydantic"

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 88
disable = "C0114, C0115, C0116, C0415, R0903"

[tool.mypy]
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
warn_unreachable = true
pretty = true

[[tool.mypy.overrides]]
module = "*.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
